--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vercel/og": "^0.0.20",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.1.4",
     "gray-matter": "^4.0.3",
     "next": "13.0.2",
     "next-mdx-remote": "^4.2.0",
@@ -31,6 +32,7 @@
     "react-toastify": "^9.1.1",
     "react-use": "^17.4.0",
     "stripe": "^10.16.0",
+    "supabase": "^1.64.8",
     "tailwind-merge": "^1.8.0"
   },
   "devDependencies": {
